--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -116,13 +116,22 @@
 
 						</div>
 					</div>
-
-
-					{% if product.stock > 0 %}
-						<a href="{{ path('cart_add', {id: product.id}) }}" class="btn btn-success">Ajouter au panier</a>
-					{% else %}
-						<p class="text-danger">Temporairement en rupture de stock</p>
-					{% endif %}
+					<!-- Section pour la quantité -->
+					<form id="addToCartForm" action="{{ path('cart_add', { id: product.id }) }}" method="get">
+						<input type="hidden" name="id" value="{{ product.id }}">
+						<div class="quantity-selector d-flex align-items-center mt-3">
+							<button type="button" class="btn btn-outline-secondary" id="decrementBtn">-</button>
+							<input type="number" id="quantityInput" name="quantity" value="1" min="1" max="{{ product.stock }}" class="form-control mx-2" style="width: 60px;">
+							<button type="button" class="btn btn-outline-secondary" id="incrementBtn">+</button>
+						</div>
+						<div class="mt-3">
+							{% if product.stock > 0 %}
+								<button type="submit" class="btn btn-success">Ajouter au panier</button>
+							{% else %}
+								<p class="text-danger">Temporairement en rupture de stock</p>
+							{% endif %}
+						</div>
+					</form>
 
 
 				</div>
@@ -136,4 +145,48 @@
 			</div>
 		</div>
 	</div>
+{% endblock %}
+
+{% block javascripts %}
+	<script>
+		document.addEventListener('DOMContentLoaded', (event) => {
+const quantityInput = document.getElementById('quantityInput');
+const incrementBtn = document.getElementById('incrementBtn');
+const decrementBtn = document.getElementById('decrementBtn');
+const addToCartBtn = document.getElementById('addToCartBtn');
+
+// Fonction pour mettre à jour le lien du bouton "Ajouter au panier"
+const updateCartLink = () => {
+const quantity = quantityInput.value;
+addToCartBtn.href = addToCartBtn.href.split('?')[0] + '?id=  {{ product.id }}&quantity=' + quantity;
+};
+
+incrementBtn.addEventListener('click', () => {
+let currentQuantity = parseInt(quantityInput.value);
+if (currentQuantity < parseInt(quantityInput.max)) {
+quantityInput.value = currentQuantity + 1;
+updateCartLink();
+}
+});
+
+decrementBtn.addEventListener('click', () => {
+let currentQuantity = parseInt(quantityInput.value);
+if (currentQuantity > 1) {
+quantityInput.value = currentQuantity - 1;
+updateCartLink();
+}
+});
+
+quantityInput.addEventListener('change', () => {
+let currentQuantity = parseInt(quantityInput.value);
+if (currentQuantity < 1) {
+quantityInput.value = 1;
+} else if (currentQuantity > parseInt(quantityInput.max)) {
+quantityInput.value = parseInt(quantityInput.max);
+}
+updateCartLink();
+});
+});
+	</script>
+
 {% endblock %}
