--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -116,7 +116,6 @@
 
 						</div>
 					</div>
-					<!-- Section pour la quantité -->
 					<form id="addToCartForm" action="{{ path('cart_add', { id: product.id }) }}" method="get">
 						<input type="hidden" name="id" value="{{ product.id }}">
 						<div class="quantity-selector d-flex align-items-center mt-3">
@@ -148,45 +147,12 @@
 {% endblock %}
 
 {% block javascripts %}
-	<script>
-		document.addEventListener('DOMContentLoaded', (event) => {
-const quantityInput = document.getElementById('quantityInput');
-const incrementBtn = document.getElementById('incrementBtn');
-const decrementBtn = document.getElementById('decrementBtn');
-const addToCartBtn = document.getElementById('addToCartBtn');
-
-// Fonction pour mettre à jour le lien du bouton "Ajouter au panier"
-const updateCartLink = () => {
-const quantity = quantityInput.value;
-addToCartBtn.href = addToCartBtn.href.split('?')[0] + '?id=  {{ product.id }}&quantity=' + quantity;
-};
-
-incrementBtn.addEventListener('click', () => {
-let currentQuantity = parseInt(quantityInput.value);
-if (currentQuantity < parseInt(quantityInput.max)) {
-quantityInput.value = currentQuantity + 1;
-updateCartLink();
-}
-});
-
-decrementBtn.addEventListener('click', () => {
-let currentQuantity = parseInt(quantityInput.value);
-if (currentQuantity > 1) {
-quantityInput.value = currentQuantity - 1;
-updateCartLink();
-}
-});
-
-quantityInput.addEventListener('change', () => {
-let currentQuantity = parseInt(quantityInput.value);
-if (currentQuantity < 1) {
-quantityInput.value = 1;
-} else if (currentQuantity > parseInt(quantityInput.max)) {
-quantityInput.value = parseInt(quantityInput.max);
-}
-updateCartLink();
-});
-});
-	</script>
-
+	<script src=" {{ asset('assets/js/shop.js') }}" defer></script>
+	<script src="{{ asset('assets/js/bootstrap.bundle.min.js') }}"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 {% endblock %}
