--- a/templates/shared/_footer.html.twig
+++ b/templates/shared/_footer.html.twig
@@ -13,7 +13,7 @@
 			<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
 
 				<div class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto" style="width: 150px; height: 150px;">
-					<img src="/assets/images/Grey & Cream Illustrated Honeybee Farm Logo.png" height="250" alt="" loading="lazy"/>
+					<img src="" height="250" alt="" loading="lazy"/>
 				</div>
 
 				<p class="text-center">Apicultrice et productrice de plantes médicales pour huiles essentielles
